kube/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dapi-test-pod
  namespace: argocd
spec:
  containers:
    - name: test-container
      image: k8s.gcr.io/busybox
      command: ["/bin/sh", "-c", "env"]
  restartPolicy: Never
