kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "mobx-barkellato-ingress"
  namespace: "mobx-barkellato-app"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: mobx-barkellato-ingress
spec:
  rules:
    # - host: hn.datree.io
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-mobx-barkellato
              port:
                number: 80
